Fixed nav on mobile

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -50,7 +50,7 @@ $responsive-pull:   false!default;
 /**
  * Tell inuit.css when breakpoints start.
  */
-$lap-start:         481px!default;
+$lap-start:         320px!default;
 $desk-start:        660px!default;
 
 
